@@ -1,3 +1,7 @@
+16 April 2012: Matthijs
+	- Allow for fd 0 in ipc.
+	- Add TLSA RRtype support.
+
 4 April 2012: Matthijs
 	- Add ECDSA support for zonec
 
